<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E9F8FF" >

    <!--  Header  Starts-->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                >
        <!-- Logo Start-->
        <ImageView
            android:src="@drawable/myapp_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo" />
        <!-- Logo Ends -->
        </LinearLayout>
    <!--  Header Ends -->


    <!-- Login Form start -->

    <LinearLayout
    android:layout_below="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"  >


    <!-- User Label -->
    <TextView
        android:id="@+id/usernameTextView"
        android:text="@string/usernameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center" />

    <!-- User EditText -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="#ffffff"
        android:layout_gravity="center_horizontal" />


    <!-- Password Label -->
    <TextView
        android:id="@+id/passwordTextView"
        android:text="@string/passwordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff" />

    <!-- Login button -->
    <Button
        android:id="@+id/loginButton"
        android:text="@string/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loginButton_clicked"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:layout_gravity="center_horizontal|center_vertical" />
    </LinearLayout>

    <!-- Login Form end -->


    <!-- Footer Start -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <!-- Register button -->
        <Button

            android:id="@+id/registerButton"
            android:text="@string/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"  />

    </LinearLayout>
    <!-- Footer Ends -->



</RelativeLayout>


</ScrollView>